Config setup and compiling

--- a/extension-firefox/devtools/panel/panel.html
+++ b/extension-firefox/devtools/panel/panel.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link href="/bootstrap-4.6.2-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<link href="bootstrap-4.6.2-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="build/style/main.css">
 	</head>
 	<body id='gl-body'>
 		<div id="mainDiv"></div>
 
 		<!-- Scripts -->
-		<script src="/jquery-3.7.0.min.js"></script>
+		<script src="jquery-3.7.0.min.js"></script>
 		<!-- script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script -->
 		<!-- everything else comes via webpack -->
 		
